# ctxd

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  pyproject.toml
.claude/instructions/: ctxd-search.md
ctxd/: __init__.py  cli.py  config.py  embeddings.py  git_utils.py  indexer.py  logging_config.py  mcp_server.py  models.py  progress.py  result_enhancer.py  store.py  utils.py  watcher.py
ctxd/chunkers/: __init__.py  base.py  fallback.py  markdown.py  treesitter.py
docs/: README.md  architecture.md  claude-code-guide.md  configuration.md  index.md  installation.md  mcp-integration.md  quickstart.md  usage.md
skills/: EXAMPLES.md  QUICK_START.md  README.md  install-skill.sh
tests/: conftest.py  test_chunkers.py  test_embeddings.py  test_git_utils.py  test_indexer.py  test_integration.py  test_js_ts_chunking.py  test_mcp.py  test_progress.py  test_result_enhancer.py  test_store.py
tests/fixtures/: sample.go  sample.js  sample.md  sample.ts
